--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -11,21 +11,25 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Reasons why Kana is a poop</h1>
+      <h1 class="page-header">Product Listings</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="product in productList">
-        <li><a href="#" tooltip="{{product.desc}}">{{product.name}}<button type="button" class="close" ng-click="deleteProduct(product)">&times;</button></a></li>
+        <li><a href="#" tooltip="${{product.price}}, {{product.desc}}">{{product.name}}<button type="button" class="close" ng-click="deleteProduct(product)">&times;</button></a></li>
       </ul>
     </div>
   </div>
 
   <form class="thing-form">
-    <label>Syncs in realtime across clients</label>
+    <label>Fill out the following form to create an entry for your product.</label>
     <p class="input-group">
-      <input type="text" class="form-control" placeholder="Add a new product here." ng-model="newProduct">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" ng-click="addProduct()">Add New</button>
-      </span>
+      <input type="text" class="form-control" placeholder="Name of the product" ng-model="productName">
     </p>
+    <p class="input-group">
+      <input type="text" class="form-control" placeholder="Description" ng-model="productDesc">
+    </p>
+    <p class="input-group">
+      <input type="text" class="form-control" placeholder="Price" ng-model="productPrice">
+    </p>
+    <button type="submit" class="btn btn-primary" ng-click="addProduct()">Add New</button>
   </form>
 </div>
 
