--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,14 +10,20 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Product Listings</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="product in productList">
-        <li><a href="#" tooltip="${{product.price}}, {{product.desc}}">{{product.name}}<button type="button" class="close" ng-click="deleteProduct(product)">&times;</button></a></li>
-      </ul>
+    <div class="col-xs-6 col-md-3" ng-repeat="product in productList">
+      <div class="thumbnail">
+        <img my-holder="holder.js/240x200">
+        <div class="caption">
+          <h3>{{product.name}}</h3>
+          <p>{{product.desc}} | ${{product.price}}</p>
+          <p><a href="#" class="btn btn-primary" role="button">Purchase</a> <button type="button" class="close" ng-click="deleteProduct(product)">&times;</button></a></p>
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
+<div class="container">
   <form class="thing-form">
     <label>Fill out the following form to create an entry for your product.</label>
     <p class="input-group">
@@ -27,10 +33,13 @@
       <input type="text" class="form-control" placeholder="Description" ng-model="productDesc">
     </p>
     <p class="input-group">
+      <span class="input-group-addon">$</span>
       <input type="text" class="form-control" placeholder="Price" ng-model="productPrice">
+      <span class="input-group-addon">.00</span>
     </p>
     <button type="submit" class="btn btn-primary" ng-click="addProduct()">Add New</button>
   </form>
+
 </div>
 
 <footer class="footer">
