--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,8 @@
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
+          <script src="app/active/active.controller.js"></script>
+          <script src="app/active/active.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
