--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,14 +9,28 @@
 </header>
 
 <div class="container">
+  <form class="thing-form">
+    <label>Create a new category.</label>
+    <p class="input-group">
+      <input type="text" class="form-control" placeholder="Category Name" ng-model="categoryName">
+    </p>
+    <p class="input-group">
+      <input type="text" class="form-control" placeholder="Description" ng-model="categoryDesc">
+    </p>
+    <button type="submit" class="btn btn-primary" ng-click="addCategory()">Add Category</button>
+  </form>
+
+</div>
+
+<div class="container">
   <div class="row">
-    <div class="col-xs-6 col-md-3" ng-repeat="product in productList">
+    <div class="col-xs-6 col-md-3" ng-repeat="category in categoryList">
       <div class="thumbnail">
         <img my-holder="holder.js/240x200">
         <div class="caption">
-          <h3>{{product.name}}</h3>
-          <p>{{product.desc}} | ${{product.price}}</p>
-          <p><a href="#" class="btn btn-primary" role="button">Purchase</a> <button type="button" class="close" ng-click="deleteProduct(product)">&times;</button></a></p>
+          <h3>{{category.name}}</h3>
+          <p>{{category.desc}}</p>
+          <p><a href="#" class="btn btn-primary" role="button">View</a> <button type="button" class="close" ng-click="deleteCategory(category)">&times;</button></a></p>
         </div>
       </div>
     </div>
