--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,46 +1,57 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>hi kana</h1>
-    <p class="lead">you are adopted</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>Wildfire</h1>
+    <p>Made with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span></p>
   </div>
 </header>
 
-<div class="container">
-  <form class="thing-form">
-    <label>Create a new category.</label>
-    <p class="input-group">
-      <input type="text" class="form-control" placeholder="Category Name" ng-model="categoryName">
-    </p>
-    <p class="input-group">
-      <input type="text" class="form-control" placeholder="Description" ng-model="categoryDesc">
-    </p>
-    <button type="submit" class="btn btn-primary" ng-click="addCategory()">Add Category</button>
-  </form>
-
-</div>
-
-<div class="container">
+<div class="container" id="login">
   <div class="row">
-    <div class="col-xs-6 col-md-3" ng-repeat="category in categoryList">
-      <div class="thumbnail">
-        <img my-holder="holder.js/240x200">
-        <div class="caption">
-          <h3>{{category.name}}</h3>
-          <p>{{category.desc}}</p>
-          <p><a href="#" class="btn btn-primary" role="button">View</a> <button type="button" class="close" ng-click="deleteCategory(category)">&times;</button></a></p>
+    <div class="col-md-4 col-md-offset-4">
+      <h1>Login</h1>
+      <form class="form" name="form" ng-submit="login(form)" novalidate>
+
+        <div class="form-group">
+          <label>Email</label>
+
+          <input type="email" name="email" class="form-control" ng-model="user.email" required>
         </div>
-      </div>
+
+        <div class="form-group">
+          <label>Password</label>
+
+          <input type="password" name="password" class="form-control" ng-model="user.password" required>
+        </div>
+
+        <div class="form-group has-error">
+          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
+             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #B22222"></span> Please enter your email and password.
+          </p>
+          <p class="help-block" ng-show="form.email.$error.email && submitted">
+             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #B22222"></span> Please enter a valid email.
+          </p>
+
+          <p class="help-block">{{ errors.other }}</p>
+        </div>
+
+        <div>
+          <button class="btn btn-inverse btn-lg btn-login" type="submit">
+            Login
+          </button>
+          <a class="btn btn-default btn-lg btn-register" href="/signup">
+            Register
+          </a>
+        </div>
+
+      </form>
     </div>
   </div>
+  <!-- <hr> -->
 </div>
 
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      <p>Another Roommate App v0.0.1 |
+        <a href="https://github.com/gvmi">@gvmi</a></p>
   </div>
 </footer>
