--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,17 +1,19 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<header class="hero-unit" id="banner">
+  <div class="container">
+    <h1><a href="/">Wildfire</a></h1>
+  </div>
+</header>
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-md-4 col-md-offset-4">
       <h1>Sign up</h1>
-    </div>
-    <div class="col-sm-12">
       <form class="form" name="form" ng-submit="register(form)" novalidate>
 
         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
                                             'has-error': form.name.$invalid && submitted }">
           <label>Name</label>
-
+ 
           <input type="text" name="name" class="form-control" ng-model="user.name"
                  required/>
           <p class="help-block" ng-show="form.name.$error.required && submitted">
@@ -27,10 +29,10 @@
                  required
                  mongoose-error/>
           <p class="help-block" ng-show="form.email.$error.email && submitted">
-            Doesn't look like a valid email.
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #B22222"></span> Please enter a valid email.
           </p>
           <p class="help-block" ng-show="form.email.$error.required && submitted">
-            What's your email address?
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #B22222"></span> What's your email address?
           </p>
           <p class="help-block" ng-show="form.email.$error.mongoose">
             {{ errors.email }}
@@ -47,7 +49,7 @@
                  mongoose-error/>
           <p class="help-block"
              ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
-            Password must be at least 3 characters.
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #B22222"></span> Password must be at least 3 characters.
           </p>
           <p class="help-block" ng-show="form.password.$error.mongoose">
             {{ errors.password }}
@@ -58,7 +60,7 @@
           <button class="btn btn-inverse btn-lg btn-login" type="submit">
             Sign up
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/login">
+          <a class="btn btn-default btn-lg btn-register" href="/">
             Login
           </a>
         </div>
@@ -66,5 +68,10 @@
       </form>
     </div>
   </div>
-  <hr>
 </div>
+<footer class="footer">
+  <div class="container">
+      <p>Another Roommate App v0.0.1 |
+        <a href="https://github.com/gvmi">@gvmi</a></p>
+  </div>
+</footer>
