--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,6 @@
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Wildfire</h1>
-    <p>Made with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span></p>
+    <h1><a href="/">Wildfire</a></h1>
   </div>
 </header>
 
@@ -12,7 +11,7 @@
       <form class="form" name="form" ng-submit="login(form)" novalidate>
 
         <div class="form-group">
-          <label>Email</label>
+          <label>Email</label> 
 
           <input type="email" name="email" class="form-control" ng-model="user.email" required>
         </div>
