--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -24,10 +24,10 @@
 
         <div class="form-group has-error">
           <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #B22222"></span> Please enter your email and password.
+             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> Please enter your email and password.
           </p>
           <p class="help-block" ng-show="form.email.$error.email && submitted">
-             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #B22222"></span> Please enter a valid email.
+             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> Please enter a valid email.
           </p>
 
           <p class="help-block">{{ errors.other }}</p>
