--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -2,10 +2,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-md-4 col-md-offset-4">
       <h1>Change Password</h1>
-    </div>
-    <div class="col-sm-12">
       <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
 
         <div class="form-group">
