--- a/client/index.html
+++ b/client/index.html
@@ -8,17 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <title></title>
-    <meta name="description" content="">
+    <meta name="description" content=""> 
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(client) app/vendor.css -->
+    <!-- build:css(client) app/vendor.css --> 
       <!-- bower:css -->
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
-      <!-- injector:css -->
+      <!-- injector:css -->  
       <!-- endinjector -->
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'> 
     <!-- endbuild -->
   </head>
   <body ng-app="wildfireApp">
