--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -1,5 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="col-md-12">
-This is the home view.
+<div class="container" id="home">
+	<div class="col-md-8">
+		<p>This is the home view.</p>
+	</div>
 </div>
