changed main loggedin view to dashboard

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -57,7 +57,7 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit" href="/home">
+          <button class="btn btn-inverse btn-lg btn-login" type="submit" href="/dashboard">
             Register
           </button>
           <a class="btn btn-default btn-lg btn-register" href="/">
@@ -71,7 +71,7 @@
 </div>
 <footer class="footer">
   <div class="container">
-      <p>Another Roommate App v0.0.1 |
+      <p>Wildfire: Another Roommate App v0.0.1 |
         <a href="https://github.com/gvmi">@gvmi</a></p>
   </div>
 </footer>
