--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -2,6 +2,6 @@
 
 <div class="container" id="home">
 	<div class="col-md-8">
-		<p>This is the home view.</p>
+		<p>This is the dashboard view.</p>
 	</div>
 </div>
