--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -50,7 +50,7 @@
 
 <footer class="footer">
   <div class="container">
-      <p>Another Roommate App v0.0.1 |
+      <p>Wildfire: Another Roommate App v0.0.1 |
         <a href="https://github.com/gvmi">@gvmi</a></p>
   </div>
 </footer>
