basic dashboard view

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,7 +1,215 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="container" id="home">
-	<div class="col-md-8">
-		<p>This is the dashboard view.</p>
+<div class="container" id="dashboard">
+    <div class="col-md-4" id="dash-1">
+    	<h2>Take out the <strong>trash.</strong></h2> 
+		<div class="table-responsive">
+		    <table class="table table-hover">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Name</th>
+						<th>Completion</th>
+						<th>Notify</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row">1</th>
+						<td>Sharrie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox11"/>
+								<label for="checkbox11"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-info btn-xs">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">2</th>
+						<td>Annie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox21"/>
+								<label for="checkbox21"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">3</th>
+						<td>Connie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox31"/>
+								<label for="checkbox31"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+				</tbody>
+		    </table>
+    		<center><a href="">Load more</a></center>
+		</div>
+	</div>
+
+    <div class="col-md-4" id="dash-1">
+    	<h2>Clean the <strong>toilet.</strong></h2> 
+		<div class="table-responsive">
+		    <table class="table table-hover">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Name</th>
+						<th>Completion</th>
+						<th>Notify</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row">1</th>
+						<td>Allie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox1"/>
+								<label for="checkbox1"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-info btn-xs">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">2</th>
+						<td>Annie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox2"/>
+								<label for="checkbox2"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">3</th>
+						<td>Connie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox3"/>
+								<label for="checkbox3"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+				</tbody>
+		    </table>
+    		<center><a href="">Load more</a></center>
+		</div>
+	</div>
+    <div class="col-md-4" id="dash-1" >
+    	<h2>Clean the <strong>kitchen.</strong></h2> 
+		<div class="table-responsive">
+		    <table class="table table-hover">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Name</th>
+						<th>Completion</th>
+						<th>Notify</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row">1</th>
+						<td>Erik</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox4"/>
+								<label for="checkbox4"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-info btn-xs">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">2</th>
+						<td>Jenny</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox5"/>
+								<label for="checkbox5"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">3</th>
+						<td>Kana</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox6"/>
+								<label for="checkbox6"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">4</th>
+						<td>Sharrie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox7"/>
+								<label for="checkbox7"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">5</th>
+						<td>Allie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox8"/>
+								<label for="checkbox8"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+					<tr>
+						<th scope="row">6</th>
+						<td>Annie</td>
+						<td id="check">
+							<div class="checkbox">
+								<input type="checkbox" id="checkbox9"/>
+								<label for="checkbox9"></label>
+							</div>
+						</td>
+						<td>
+							<button type="button" class="btn btn-default btn-xs" disabled="disabled">Psst!</button>
+						</td>
+					</tr>
+				</tbody>
+		    </table>
+    		<center><a href="">Load more</a></center>
+		</div>
 	</div>
 </div>
