ui less dumb looking

--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
+          <script src="app/home/home.controller.js"></script>
+          <script src="app/home/home.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/myHolder/myHolder.directive.js"></script>
