--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -1,9 +1,9 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="container">
+<div class="container" id="settings">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1>Change Password</h1>
+      <h3>Change Password</h3>
       <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
 
         <div class="form-group">
@@ -24,13 +24,13 @@
                  required/>
           <p class="help-block"
              ng-show="(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || submitted)">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> Password must be at least 3 characters.
+            <i class="fa fa-exclamation-triangle" style="color: #ED5565"></i> Password must be at least 3 characters.
           </p>
         </div>
 
         <p class="help-block"> {{ message }} </p>
 
-        <button class="btn btn-lg" type="submit">Save changes</button>
+        <button class="btn btn-primary" type="submit">Save changes</button>
       </form>
     </div>
   </div>
