--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -7,7 +7,7 @@
 <div class="container" id="register">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <h1>Register</h1>
+      <h3>Register</h3>
       <form class="form" name="form" ng-submit="register(form)" novalidate>
 
         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
@@ -17,7 +17,7 @@
           <input type="text" name="name" class="form-control" ng-model="user.name"
                  required/>
           <p class="help-block" ng-show="form.name.$error.required && submitted">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> A name is required
+            <i class="fa fa-exclamation-triangle" style="color: #ED5565"></i> A name is required
           </p>
         </div>
 
@@ -29,10 +29,10 @@
                  required
                  mongoose-error/>
           <p class="help-block" ng-show="form.email.$error.email && submitted">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> Please enter a valid email.
+            <i class="fa fa-exclamation-triangle" style="color: #ED5565"></i> Please enter a valid email.
           </p>
           <p class="help-block" ng-show="form.email.$error.required && submitted">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> What's your email address?
+            <i class="fa fa-exclamation-triangle" style="color: #ED5565"></i> What's your email address?
           </p>
           <p class="help-block" ng-show="form.email.$error.mongoose">
             {{ errors.email }}
@@ -47,9 +47,8 @@
                  ng-minlength="3"
                  required
                  mongoose-error/>
-          <p class="help-block"
-             ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> Password must be at least 3 characters.
+          <p class="help-block" ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
+            <i class="fa fa-exclamation-triangle" style="color: #ED5565"></i> Password must be at least 3 characters.
           </p>
           <p class="help-block" ng-show="form.password.$error.mongoose">
             {{ errors.password }}
@@ -57,10 +56,10 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit" href="/dashboard">
+          <button class="btn btn-inverse btn-login" type="submit" href="/dashboard">
             Register
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/">
+          <a class="btn btn-default btn-register" href="/">
             Login
           </a>
         </div>
@@ -71,7 +70,6 @@
 </div>
 <footer class="footer">
   <div class="container">
-      <p>Wildfire: Another Roommate App v0.0.1 |
-        <a href="https://github.com/gvmi">@gvmi</a></p>
+      <p>Wildfire: Another Roommate App v0.0.1 | <a href="https://github.com/gvmi">@gvmi</a></p>
   </div>
 </footer>
