--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -7,7 +7,7 @@
 <div class="container" id="login">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <h1>Login</h1>
+      <h3>Login</h3>
       <form class="form" name="form" ng-submit="login(form)" novalidate>
 
         <div class="form-group">
@@ -24,20 +24,20 @@
 
         <div class="form-group has-error">
           <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> Please enter your email and password.
+            <i class="fa fa-exclamation-triangle" style="color: #ED5565"></i> Please enter your email and password.
           </p>
           <p class="help-block" ng-show="form.email.$error.email && submitted">
-             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true" style="color: #DC143C"></span> Please enter a valid email.
+            <i class="fa fa-exclamation-triangle" style="color: #ED5565"></i> Please enter a valid email.
           </p>
 
           <p class="help-block">{{ errors.other }}</p>
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
+          <button class="btn btn-inverse btn-login" type="submit">
             Login
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
+          <a class="btn btn-default btn-register" href="/signup">
             Register
           </a>
         </div>
@@ -50,7 +50,6 @@
 
 <footer class="footer">
   <div class="container">
-      <p>Wildfire: Another Roommate App v0.0.1 |
-        <a href="https://github.com/gvmi">@gvmi</a></p>
+      <p>Wildfire: Another Roommate App v0.0.1 | <a href="https://github.com/gvmi">@gvmi</a></p>
   </div>
 </footer>
